styles.css
* {
  margin: 0;
}

body {
    background-color: #1d1b1b;
    color: #c7c6c6;
}

nav {
  background: black;
  display: flex;
  position: fixed;
  width: 100%;
  top: 0;
  left: 0;
  justify-content: flex-end;
  box-shadow: 0 2px 0 rgba(0, 0, 0, 0.3);
}

a {
  text-decoration: none;
  color: #6f6f6f;
  font-size: 2rem;
  display: block;
  padding: 2rem;
  text-shadow: -2px 3px 0 rgb(30, 27, 27);
}

.nav-list {
  display: flex;
  list-style: none;
}

nav a:hover {
  text-shadow: none;
}

#name {
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 100%;
  left: 0;
  padding: 0;
  font-size: 3rem;
  color: white;
  font-family: serif;
}

#about-me{
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 10% 5%;
  color: #c7c6c6;;
}

.about-me-section {
  text-align: justify;
  margin: 3% 5% 5% 5%;
  font-size: 1.5rem;
}

h2 {
  font-size: 5rem;
  padding-left: 5%;
}

#name p {
  padding-left: 5%;
}

h3 {
  font-size: 2rem;
  padding-top: 4%;
  width: 100%;
  text-align: center;
}

#projects {
  padding-top: 10%;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-bottom: 10%;
}

.projects-grid {
  width: 100%;
  display: flex;
  justify-content: center;
}

.project-tile {
  width: 300px;
  height: 300px;
	float: left;
	margin: 1.66%;
	border-radius: 15%;
  background-image: linear-gradient(10deg, #373f40 0%, #75797b 90%);
  font-size: 1.5rem;
  justify-content: center;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  box-shadow: -5px 2px 0 rgba(1, 1, 1, 0.4);
  color: black;
}

#projects p {
  margin: 0 5%;
}

#contact {
  align-items: center;
  display: flex;
  flex-direction: column;
  height: 20%;
  padding: 10% 0;
}
.socials {
  width: 50%;
  display: flex;
  justify-content: center;
}

.socials a{
  color: #4a4444;
  float: left;
  margin: 3%;
  padding: 10px;
  text-shadow: -2px 3px 0 rgba(0, 0, 0, 0.4);
}

.socials a:hover{
  text-shadow: none;
}

footer {
  background: black;
  height: 10vh;
  width: 100%;
  color: #6f6f6f;
  float: right;
  align-items: center;
}

footer p {
  padding: 2%;
}

